fixed issue with picture not fitting and cleaned up css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,7 @@
 
 body {
     line-height: 1.5;
-    background-image: url(../images/cool-back.png);
-    background-repeat: space;
-    background-size: 100%;
+    background-color: var(--whitesmoke);
 }
 
 p { 
@@ -29,10 +27,10 @@ p {
 header {
     padding: 6px;
     text-align: center;
-    background-color: var (--whitesmoke);
     color: var (--black); 
     font-size: 50px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    display:grid;
 }
 
 h1 {
@@ -40,12 +38,12 @@ h1 {
     margin-top: 30px;
 }
 
+
 h2 {
-    margin-top: 20px;
-    margin-left: -126px;
-    font-weight:lighter ;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;  
-    font-size: 30px;
+font-weight: lighter;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-size: 50px;
+padding-top: 24px;
 }
 
 h3 {
@@ -58,8 +56,22 @@ h3 {
 h4 {
 font-weight: lighter;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-font-size: 30px;
+font-size: 50px;
 padding-top: 24px;
+}
+
+h5 {
+    font-weight: lighter;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 30px;
+    padding-top: 24px;
+}
+
+h6 {
+    font-weight: lighter;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    padding-top: 24px;
 }
 
 nav {
@@ -76,62 +88,84 @@ nav a {
     font-size: 30px;
     font-weight: lighter;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    display: flex;
 }
 
-.about-me-container {
-    background-color: var (--whitesmoke);
+nav a:hover {
+    color: red;
 }
 
 .about-me-flex {
-    display: inline-flex;
+    display: flex;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
 }
 
 .profile-pic {
+    display: flex;
     width: 300px;
     margin-left: 50px;
     border-radius: 10%;
 }
 
 .my-work-container {
-    background-color: rgb(190, 174, 168);
-    padding: 34px 300px;   
+    width: 100%; 
+    justify-content: center;
+    text-align: center;
+    color: var (--black); 
+    height: 700px;
+    background-color: rgb(190, 174, 168)
 }
 
-.horiseon-mockup {
-    width: 750px;
-    margin-left: 50px;
-    border: 5px solid whitesmoke; 
-    margin-bottom: 10px;
-}
-
-
-.horiseon-mockup:hover {
-border: 5px solid black;
-}
-
-.my-work-flex {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
-    justify-content:space-around;
-}
-
-.my-work-title {
-    font-size: 50px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: lighter;
-    margin-bottom: 0%;
-    justify-content: space-evenly;
+@media screen and (max-width: 768px ) {
+    .my-work-container {
+        flex-direction: column;
+    }
+    
 }
 
 .my-work-text {
-    margin-top: -37px;
-    margin-left: 50px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: lighter;
+    font-size: 20px;  
+    justify-content: center;
+    overflow-wrap: break-word;
+    text-align: center;
+}
+
+.my-work-container p {
+    margin-left: auto;
+}
+
+
+.horiseon-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.horiseon-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    border-radius: 1%;
+}
+
+.horiseon-image:hover {
+    border: black 2px solid;
+}
+
+.image-holder p {
+    margin-left: auto;
+    inline-size: 500px;
+    overflow-wrap: break-word;
 }
 
 .place-holder-container {
+    width: 100%;
+    display: flex;
     padding-bottom: 50px;
 }
 
@@ -171,9 +205,7 @@ justify-content: space-evenly;
     text-align: center;
     color: var (--black); 
     height: 400px;
-    background-image: url(../images/cool-contact.png);
-    background-repeat: space;
-    background-size: 100%;
+    background-color: var (--whitesmoke);
 }
 
 .contact-me-text {
@@ -192,15 +224,12 @@ justify-content: space-evenly;
 
 .facebook-logo:hover,
 .linkedin-logo:hover,
-.github-logo:hover {
-    border: 2px black solid;
+.github-logo:hover  {
+    border: 5px black solid;
 }
 
 footer {
-    background-image: url(../images/cool-footer.png);
-    background-size: 100%;
-    background-repeat: space;
-    opacity: 0.6;
+    background-color: var (--whitesmoke);
     padding: 20px;
     text-align: center;
     font-size: 10px;
@@ -209,9 +238,22 @@ footer {
 
 
 @media screen and (max-width: 768px) {
-    main,
-    nav {
-        flex-direction: column;
-    }
+.about-me-flex {
+    flex-direction: column;
+    align-items: center;
+}
 }
 
+@media screen and (max-width: 768px) {
+.my-work-container {
+flex-direction: column;
+align-items: center;
+}
+}
+
+@media screen and  (max-width: 768px ) {
+.contact-me-container {
+    flex-direction: column;
+    align-items: center;
+}
+}
